--- a/style.css
+++ b/style.css
@@ -128,7 +128,7 @@ body{
 }
 .cards {
     background-color: white;
-    width:25%;
+    width: 1fr 1fr 1fr;
     height:auto;
     overflow: scroll;
     box-shadow: 2px 2px 7px rgb(0,0,0,0.4);
