--- a/style.css
+++ b/style.css
@@ -128,9 +128,9 @@ body{
 }
 .cards {
     background-color: white;
-    width: 1fr 1fr 1fr;
+    width: 25%;
     height:auto;
-    overflow: scroll;
+    overflow: hidden;
     box-shadow: 2px 2px 7px rgb(0,0,0,0.4);
     border: 2px;
     border-image: linear-gradient(135deg,#02aab0,#00cdac);
